[gd_scene load_steps=5 format=3 uid="uid://b717h2uu1gkng"]

[ext_resource type="Script" uid="uid://cdtgnka0qmerq" path="res://Ship/player_ship.gd" id="1_wbwtt"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1hoos"]
size = Vector3(1.15, 1.15, 1.15)

[sub_resource type="BoxShape3D" id="BoxShape3D_kocfl"]
size = Vector3(1.3, 1.3, 1.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_ws50o"]

[node name="PlayerShip" type="CharacterBody3D"]
collision_mask = 16843009
script = ExtResource("1_wbwtt")

[node name="HitBox" type="Area3D" parent="."]
collision_mask = 256

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBox"]
shape = SubResource("BoxShape3D_1hoos")
debug_color = Color(1, 0, 0, 0.69411767)

[node name="HurtBox" type="Area3D" parent="."]
collision_mask = 256

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBox"]
shape = SubResource("BoxShape3D_kocfl")
debug_color = Color(1, 1, 0, 0.2901961)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_ws50o")

[node name="RotationPivot" type="Node3D" parent="."]

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="RotationPivot"]

[node name="Body" type="CSGBox3D" parent="RotationPivot/CSGCombiner3D"]

[node name="Top" type="CSGBox3D" parent="RotationPivot/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5362071, 0)
size = Vector3(0.2, 0.20527345, 0.2)

[node name="Front" type="CSGBox3D" parent="RotationPivot/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.023935735, -0.89983946)
size = Vector3(0.2, 0.2, 0.8290771)

[node name="BulletSpawn" type="Marker3D" parent="RotationPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5078855)
